fixed margins on tablet view and added function to shonly one jsfun function at at time

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
   color: var(--purple);
   margin: 0;
   padding: 0;
+  /* max-width: 100%; */
   /* min-height: calc(100vh-[footer height in px]); */
 }
 
@@ -422,7 +423,6 @@ margin: auto;
     color: var(--red);
     cursor: pointer;
   }
-  conta
    
    
 
@@ -500,38 +500,63 @@ margin: auto;
   
 }
  @media (min-width: 700px) {
+
+  .header-bar {
+    justify-content: space-evenly;
+  }
     .burger {
       display: none;
     }
     .header-bar {
+      /* max-width: 100%; */
       justify-content: space-evenly;
     }
     
     .nav {
+      max-width: 100%;
      margin: none; 
+     justify-content: space-evenly;
+     padding: 0;
+    }
+    .nav ul {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 0;
+    }
+    .navlink {
+      margin: 0;
+      padding: .5rem;
+      justify-content: space-evenly;
+
     }
    .projects-grid-container {
   display: grid;
+  /* max-width: 100%; */
   grid-template-columns: 1fr 1fr 1fr;
  }
 
  .about-page-hero-section {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    max-width: 100%;
     justify-content: space-evenly;
     padding: 1rem;
- }
- .about-page-hero-section span {
-    white-space: nowrap;
- }
- .about-page-hero-section p {
+    span {
+      white-space: nowrap;
+   }
+   p {
     grid-column: 1/2;
     font-size: 1.5rem;
  }
- .about-page-hero-section img {
-    grid-column: 2/3;
-    grid-row: 1/3;
+ img {
+  grid-column: 2/3;
+  grid-row: 1/3;
+}
  }
+
  .jscode-btn-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -553,6 +578,9 @@ margin: auto;
 @media (min-width: 1100px) {
   .hero-section, .about-page-hero-section, .contact-page-hero-section {
     padding: 1.5rem 3rem;
+  }
+  .nav {
+    font-size: larger;
   }
 
   .jscode-btn-container {
